feat: add application info (#9)
* feat: add application info

* feat: add application info
